# HWVideoTest

./: CMakeLists.txt  VideoCapture.cpp  VideoCapture.h  VideoWriter.cpp  VideoWriter.h  convert.cu  convert.cuh  main.cpp  yuv2rgb_cuda.cu  yuv2rgb_cuda.cuh
NvCodec/NvDecoder/: NvDecoder.cpp  NvDecoder.h
NvCodec/NvEncoder/: NvEncoder.cpp  NvEncoder.h  NvEncoderCuda.cpp
Utils/: ColorSpace.cu  FFmpegDemuxer.h
